[maven-release-plugin] prepare release serenity-maven-plugin-2.1.1

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.serenity-bdd.maven.plugins</groupId>
     <artifactId>serenity-maven-plugin</artifactId>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.1.1</version>
     <packaging>maven-plugin</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,7 +42,7 @@
         <connection>scm:git:https://github.com/serenity-bdd/maven-serenity-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:serenity-bdd/maven-serenity-plugin.git</developerConnection>
         <url>https://github.com/serenity-bdd/maven-serenity-plugin</url>
-        <tag>HEAD</tag>
+        <tag>serenity-maven-plugin-2.1.1</tag>
     </scm>
 
     <build>
