--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.serenity-bdd.maven.plugins</groupId>
     <artifactId>serenity-maven-plugin</artifactId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.0</version>
     <packaging>maven-plugin</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -42,7 +42,8 @@
         <connection>scm:git:https://github.com/serenity-bdd/serenity-maven-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/serenity-bdd/serenity-maven-plugin.git</developerConnection>
         <url>https://github.com/serenity-bdd/maven-serenity-plugin</url>
-    </scm>
+      <tag>serenity-maven-plugin-2.2.0</tag>
+  </scm>
 
     <build>
         <plugins>
