--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>serenity-parent-pom</artifactId>
         <groupId>net.serenity-bdd</groupId>
-        <version>2.3.15</version>
+        <version>2.3.16-SNAPSHOT</version>
     </parent>
     <artifactId>serenity-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
