--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
     <groupId>net.serenity-bdd.maven.plugins</groupId>
 
     <parent>
-        <artifactId>serenity-parent-pom</artifactId>
+        <artifactId>serenity-bdd</artifactId>
         <groupId>net.serenity-bdd</groupId>
-        <version>2.3.16-SNAPSHOT</version>
+        <version>2.4.1-SNAPSHOT</version>
     </parent>
     <artifactId>serenity-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
